--- a/Lyrical/views/login.slim
+++ b/Lyrical/views/login.slim
@@ -1,5 +1,5 @@
 h2 Login
-form action='/login' method='get'
+form action='/login' method='post'
     label for="username" Username <br>
     input name="username" id="username" placeholder="Pliz enter uzenam" type="text" <br> 
     label for="password" Password <br>
