--- a/Lyrical/views/your_lyrics/index.slim
+++ b/Lyrical/views/your_lyrics/index.slim
@@ -1,13 +1,17 @@
 h1 Writing time! 
 
-button Add new songtext
-form action='/new_text' method='post'
-    label for="title" Your title <br>
-    input name="title" id="title" placeholder="Enter title" type="text" <br> 
-    label for="text_content" Your lyrics <br>
-    input name="text_content" id="text_content" placeholder="Write your lyrics here" type="text" <br> 
-    label for="submit" <br>
-    input type="submit" name="submit" value="Submit"
+- if session[:user_id] != nil
+    button Add new songtext
+    form action='/your_lyrics/new' method='post'
+        label for="title" Your title <br>
+        input name="title" id="title" placeholder="Enter title" type="text" <br> 
+        label for="text_content" Your lyrics <br>
+        input name="text_content" id="text_content" placeholder="Write your lyrics here" type="text" <br> 
+        label for="submit" <br>
+        input type="submit" name="submit" value="Submit"
+- else
+    h2 Sign up or login to begin writing!
+
 
 - idea = session[:idea]
 
